changed overlay to fixed, z-index

--- a/webroot/revenant/css/main.css
+++ b/webroot/revenant/css/main.css
@@ -38,7 +38,9 @@
 
 /* LOADING SPINNER */
 #spinner-overlay {
-  position: absolute;
+  position: fixed;
+  height: 100%;
+  z-index: 9999;
   top: 0;
   bottom: 0;
   left: 0;
